// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log output Group: logs Test: logs: log 1`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[49]:42)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:6)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 2`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3616,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[53]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:10)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 3`] = `
HostValue {
  "isManaged": true,
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[60]:42)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:14)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 4`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": Array [
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3472,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[64]:42)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:49)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 5`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3520,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[72]:42)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:66)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 6`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[76]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:76)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 7`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[80]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:83)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 8`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[84]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:92)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 9`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[88]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:96)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 10`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[92]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:100)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 11`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:104)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 12`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:108)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 13`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3344,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[103]:42)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:112)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 14`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3408,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[108]:42)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:116)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 15`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[111]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:120)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "assembly/jest-log/IdFunction",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 16`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:172)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 17`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": Array [
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 1408,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "a",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 1440,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "b",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 1472,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "c",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3584,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/UnmanagedClass> (wasm-function[116]:27)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:182)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:7)",
  "type": 1,
  "typeId": 0,
  "typeName": "UnmanagedClass",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3776,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3776,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3776,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 1`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[49]:42)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:6)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs: log 2`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3616,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[53]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:10)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs: log 3`] = `
HostValue {
  "isManaged": true,
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[60]:42)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:14)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 4`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": Array [
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3472,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[64]:42)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:49)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 5`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3520,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[72]:42)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:66)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 6`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[76]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:76)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 7`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[80]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:83)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs: log 8`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[84]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:92)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 9`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[88]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:96)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 10`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[92]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:100)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 11`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:104)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 1,
  "values": null,
}
`;

exports[`log output Group: logs: log 12`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:108)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 13`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3344,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[103]:42)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:112)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 14`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3408,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[108]:42)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:116)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 15`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:3)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[111]:27)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:120)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "assembly/jest-log/IdFunction",
  "values": null,
}
`;

exports[`log output Group: logs: log 16`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:172)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:17)
    at start:assembly/jest-log (wasm-function[126]:70)
    at ~start (wasm-function[140]:12)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs: todo 1`] = `"one"`;

exports[`log output Group: logs: todo 2`] = `"two"`;

exports[`log output Group: logs: todo 3`] = `"three"`;
